# open-jet

./: .gitattributes  .gitignore  .gitignore.swp  CLA.md  CONTRIBUTING.md  LICENSE  README.md  README.pypi.md  VP_VULKANINFO_Microsoft_Direct3D12_(AMD_Radeon_RX_6700_XT)_25_3_6.json  config.yaml  config.yaml.bak.pre-update-0.3.4  install-macos.sh  install.bat  install.sh  jet-push  pyproject.toml  setup.py  skills.md  story.txt  test.txt  test_script.py
.claude/: settings.local.json
.github/workflows/: release.yml  tests.yml
.openjet/: skills.md
.openjet/agents/: base.md  chat.md  coder.md  debugger.md  reviewer.md
.openjet/frameworks/: python.md
.openjet/memory/: decisions.md  failures.md  session.md
.openjet/projects/: default.md
.openjet/skills/: jetson-debug.md  python-refactor.md  review-changes.md  write-tests.md
.openjet/stages/: implement.md  plan.md  review.md  verify.md
.openjet/state/: session.json
benchmarks/: judge_instructions.md
benchmarks/cases/: manufacturing_edit_threshold.json  manufacturing_threshold_grep.json  ops_env_inventory.json  ops_read_architecture_note.json  ops_write_incident_note.json  robotics_multi_turn_bugfix.json  robotics_python_glob.json  runtime_load_service_module.json  runtime_shell_verification.json
benchmarks/context/: README.md
benchmarks/envs/: README.md
docs/: benchmarking.md  configuration.md  installation.md  licensing.md  overview.md  quickstart.md  telemetry.md
docs/architecture/: edge-inputs-phase-1.md  input-processing-basic.md  layers.md
docs/deployment/: cpu-only.md  jetson.md  linux-x86-nvidia.md
docs/examples/: README.md  otel-collector.yaml
docs/runtimes/: llama-cpp.md  openai-compatible.md  openrouter.md  sglang.md  tensorrt-llm.md
open_jet/: __init__.py
openjet/: __init__.py
scripts/: build-compiled.sh  compare_with_pypi_release.py  release_pypi.sh  sync_pypi_readme.py
session_logs/: 20260217T164250Z_smoke_bade2a4c.events.jsonl  20260217T164250Z_smoke_bade2a4c.metrics.jsonl  20260217T165229Z_open-jet_66f11766.events.jsonl  20260217T165229Z_open-jet_66f11766.metrics.jsonl  20260217T165703Z_open-jet_d49b81f6.events.jsonl  20260217T165703Z_open-jet_d49b81f6.metrics.jsonl  20260217T172802Z_open-jet_d803602b.events.jsonl  20260217T172802Z_open-jet_d803602b.metrics.jsonl  20260217T173037Z_open-jet_96e55599.events.jsonl  20260217T173037Z_open-jet_96e55599.metrics.jsonl  20260217T173223Z_open-jet_fc738e39.events.jsonl  20260217T173223Z_open-jet_fc738e39.metrics.jsonl  20260217T173518Z_open-jet_2c27dd18.events.jsonl  20260217T173518Z_open-jet_2c27dd18.metrics.jsonl  20260217T174629Z_open-jet_56298a5c.events.jsonl  20260217T174629Z_open-jet_56298a5c.metrics.jsonl  20260217T201945Z_open-jet_914334f5.events.jsonl  20260217T201945Z_open-jet_914334f5.metrics.jsonl  20260217T202630Z_open-jet_b3633a3f.events.jsonl  20260217T202630Z_open-jet_b3633a3f.metrics.jsonl  20260217T203924Z_open-jet_a5250a1f.events.jsonl  20260217T203924Z_open-jet_a5250a1f.metrics.jsonl  20260217T205809Z_open-jet_0f54e32e.events.jsonl  20260217T205809Z_open-jet_0f54e32e.metrics.jsonl  20260217T210945Z_open-jet_b54670fe.events.jsonl  20260217T210945Z_open-jet_b54670fe.metrics.jsonl  20260217T211559Z_open-jet_7f5bc77a.events.jsonl  20260217T211559Z_open-jet_7f5bc77a.metrics.jsonl  20260217T212631Z_open-jet_a72bf8e4.events.jsonl  20260217T212631Z_open-jet_a72bf8e4.metrics.jsonl  20260217T213811Z_open-jet_92dc3699.events.jsonl  20260217T213811Z_open-jet_92dc3699.metrics.jsonl  20260217T220634Z_open-jet_9bb75967.events.jsonl  20260217T220634Z_open-jet_9bb75967.metrics.jsonl
src/: .app.tcss.swp  .app.tscss.swp  __init__.py  agent.py  airgap.py  api_auth.py  app.py  app.tcss  app_paths.py  app_rendering.py  app_telemetry.py  benchmark.py  cli.py  codex_auth.py  commands.py  completion.py  config.py  context_benchmark.py  context_index.py  device_sources.py  executor.py  hardware.py  harness.py  harness_debug.py  litellm_client.py  llama_server.py  memory_reflection.py  model_profiles.py  multimodal.py  ollama_client.py  ollama_setup.py  openai_codex_client.py  openai_compatible.py  persistent_memory.py  provisioning.py  runtime_client.py  runtime_limits.py  runtime_protocol.py  runtime_registry.py  sdk.py  (+16 more)
tests/: __init__.py  context_helpers.py  test_airgap.py  test_app.py  test_benchmark.py  test_cli_chat.py  test_cli_devices.py  test_cli_update.py  test_config.py  test_context_benchmark.py  test_context_harness.py  test_context_index.py  test_context_memory.py  test_device_tags.py  test_executor_tools.py  test_hardware.py  test_harness.py  test_litellm_runtime.py  test_mcp_cli.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_results.py  test_mcp_runtime_protocol.py  test_mcp_schema.py  test_observation.py  test_openai_codex_runtime.py  test_peripherals.py  test_provisioning.py  test_runtime_limits.py  test_runtime_protocol.py  test_sdk_fix.py  test_sdk_recommendations.py  test_self_update.py  test_session_logging.py  test_setup_memory.py  test_skill_command_flow.py  test_skills_cli.py  test_skills_discovery.py  test_skills_hub_lockfile.py  test_skills_hub_scanner.py  (+13 more)
(+103 files in other folders)
